some more work on css laf and looking into gtk